@@ -584,7 +584,7 @@ public class GroupPeerManager
 
         if(obj == null)
         {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
 
         try
