@@ -640,7 +640,7 @@ public class PermissionPeerManager
 
         if(obj == null)
         {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
 
         try
