@@ -469,7 +469,7 @@ public class TorqueUser
      */
     public void setAccessCounter(int cnt)
     {
-        setPerm(User.ACCESS_COUNTER, new Integer(cnt));
+        setPerm(User.ACCESS_COUNTER, Integer.valueOf(cnt));
     }
 
     /**
@@ -480,7 +480,7 @@ public class TorqueUser
      */
     public void setAccessCounterForSession(int cnt)
     {
-        setTemp(User.SESSION_ACCESS_COUNTER, new Integer(cnt));
+        setTemp(User.SESSION_ACCESS_COUNTER, Integer.valueOf(cnt));
     }
 
     /**
