@@ -172,7 +172,7 @@ public class PermissionSet
     public Permission getPermissionById(int permissionId)
     {
         return (permissionId != 0)
-                ? (Permission) idMap.get(new Integer(permissionId)) : null;
+                ? (Permission) idMap.get(Integer.valueOf(permissionId)) : null;
     }
 
     /**
