@@ -170,7 +170,7 @@ public class RoleSet
     public Role getRoleById(int roleId)
     {
         return (roleId != 0)
-                ? (Role) idMap.get(new Integer(roleId)) : null;
+                ? (Role) idMap.get(Integer.valueOf(roleId)) : null;
     }
 
     /**
